// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField should render as textarea 1`] = `
.c1 {
  margin-bottom: 16px;
}

.c3 {
  word-wrap: break-word;
  resize: none;
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
  height: auto;
  -webkit-transition: border 0.2s ease;
  transition: border 0.2s ease;
}

.c3:hover {
  border-color: #3c5ad0;
}

.c3:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c3:disabled,
.c3 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c3::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c3::-moz-placeholder {
  color: #bfbfbf;
}

.c3:-ms-input-placeholder {
  color: #bfbfbf;
}

.c3::placeholder {
  color: #bfbfbf;
}

.c0 {
  position: relative;
  margin-top: 10px;
}

.c0 .c4 ~ label,
.c0 .c2 ~ label {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c4:invalid,
.c0 .c2:invalid {
  box-shadow: none;
}

.c0 .c4:invalid ~ label,
.c0 .c2:invalid ~ label {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c4:focus ~ label,
.c0 .c2:focus ~ label {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
}

.c0 .c4:focus ~ .c5,
.c0 .c2:focus ~ .c5 {
  opacity: 1;
}

<div
  class="c0 c1"
>
  <textarea
    class="c2 c3"
    id="tailor_form-field_0_7"
    required=""
    rows="1"
    style="overflow-x: hidden; word-wrap: break-word; overflow-y: hidden;"
  />
  <label>
    Text Field(textarea)
  </label>
</div>
`;

exports[`TextField should render correctly 1`] = `
.c1 {
  margin-bottom: 16px;
}

.c3 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3:hover {
  border-color: #3c5ad0;
}

.c3:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c3:disabled,
.c3 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c3::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c3::-moz-placeholder {
  color: #bfbfbf;
}

.c3:-ms-input-placeholder {
  color: #bfbfbf;
}

.c3::placeholder {
  color: #bfbfbf;
}

.c0 {
  position: relative;
  margin-top: 10px;
}

.c0 .c2 ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0 ~ label {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2:invalid,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid {
  box-shadow: none;
}

.c0 .c2:invalid ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid ~ label {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c2:focus ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ label {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
}

.c0 .c2:focus ~ .c4,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c4 {
  opacity: 1;
}

<div
  class="c0 c1"
>
  <input
    class="c2 c3"
    id="tailor_form-field_0_1"
    required=""
    value=""
  />
  <label>
    placeholder
  </label>
</div>
`;

exports[`TextField should render correctly with defaultValue 1`] = `
.c1 {
  margin-bottom: 16px;
}

.c3 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3:hover {
  border-color: #3c5ad0;
}

.c3:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c3:disabled,
.c3 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c3::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c3::-moz-placeholder {
  color: #bfbfbf;
}

.c3:-ms-input-placeholder {
  color: #bfbfbf;
}

.c3::placeholder {
  color: #bfbfbf;
}

.c0 {
  position: relative;
  margin-top: 10px;
}

.c0 .c2 ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0 ~ label {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2:invalid,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid {
  box-shadow: none;
}

.c0 .c2:invalid ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid ~ label {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c2:focus ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ label {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
}

.c0 .c2:focus ~ .c4,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c4 {
  opacity: 1;
}

<div
  class="c0 c1"
>
  <input
    class="c2 c3"
    id="tailor_form-field_0_3"
    required=""
    value="text field"
  />
  <label>
    placeholder
  </label>
</div>
`;

exports[`TextField should render with maxLength 1`] = `
.c1 {
  margin-bottom: 16px;
}

.c3 {
  display: block;
  width: 100%;
  max-width: 100%;
  border: 1px solid;
  border-radius: 0.25rem;
  border-color: #bfbfbf;
  outline: none;
  background-color: #ffffff;
  color: #373737;
  line-height: 1.5;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 2.25rem;
  padding: 4px 0.75rem;
  font-size: 1rem;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3:hover {
  border-color: #3c5ad0;
}

.c3:focus {
  border-color: #3c5ad0;
  box-shadow: inset 0 0 0 2px #e8ecf5;
}

.c3:disabled,
.c3 [disabled] {
  border-color: #bfbfbf;
  background-color: #e0e0e0;
  color: #8b8b8b;
  cursor: not-allowed;
}

.c3::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c3::-moz-placeholder {
  color: #bfbfbf;
}

.c3:-ms-input-placeholder {
  color: #bfbfbf;
}

.c3::placeholder {
  color: #bfbfbf;
}

.c0 {
  position: relative;
  margin-top: 10px;
}

.c0 .c2 ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0 ~ label {
  position: absolute;
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
  line-height: 1;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 .c2:invalid,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid {
  box-shadow: none;
}

.c0 .c2:invalid ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0:invalid ~ label {
  top: 9px;
  left: 1px;
  padding: 0 0.5rem;
  color: #bfbfbf;
  font-size: 1rem;
}

.c0 .c2:focus ~ label,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ label {
  top: -7px;
  left: 7px;
  padding: 0 2px;
  background-color: #fff;
  color: #3c5ad0;
  font-size: 0.75rem;
}

.c0 .c2:focus ~ .c4,
.c0 .Textarea__StyledTextarea-vlcri7-0:focus ~ .c4 {
  opacity: 1;
}

<div
  class="c0 c1"
>
  <input
    class="c2 c3"
    id="tailor_form-field_0_5"
    maxlength="20"
    required=""
    value=""
  />
  <label>
    placeholder
  </label>
</div>
`;
